@@ -1,2 +1,6 @@
 Actions:
 - A regex validator dialog
+Collector:
+- As of the last "set clipman automatically the owner" change, for instance
+Thunar copy files has a special type but reported as utf8 string, it is
+necessary to have a proper filter on what is to be copied and not
