@@ -1,4 +1,7 @@
 2009-04-02	Mike Massonnet
+New test program to report targets
+
+2009-04-02	Mike Massonnet
 String update (Regex > Pattern)
 
 2009-04-02	Mike Massonnet
